Fix #107726: Viewport animation render ignores start frame

This issue specifically happend if sound playback is synchronized by
Audaspace. In this case render engine can't override current frame.
`BKE_sound_sync_scene()` should return NaN as when rendering is in
progress, however viewport render operator doesn't set `G.is_rendering`.

Pull Request: https://projects.blender.org/blender/blender/pulls/111946